# CppProfiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  annotated.html  annotated_dup.js  classes.html  dir_000002_000000.html  dir_000004_000000.html  dir_1ab1aef5c3d5dd2f496a476aaabe2c94.html  dir_1ab1aef5c3d5dd2f496a476aaabe2c94.js  dir_1ab1aef5c3d5dd2f496a476aaabe2c94_dep.map  dir_1ab1aef5c3d5dd2f496a476aaabe2c94_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.js  dir_a0d713cea12394a4c028036c439896df.html  dir_a0d713cea12394a4c028036c439896df.js  dir_a0d713cea12394a4c028036c439896df_dep.map  dir_a0d713cea12394a4c028036c439896df_dep.md5  dir_faf348fa7d8e9c306e22647c38530714.html  dir_faf348fa7d8e9c306e22647c38530714.js  dir_faf348fa7d8e9c306e22647c38530714_dep.map  dir_faf348fa7d8e9c306e22647c38530714_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  (+33 more)
.github/workflows/: documentation.yml  tests_linux.yml  tests_macos.yml  tests_windows.yml
Profile/: CMakeLists.txt
Profile/headers/: Export.hpp  Profiler.hpp  Timing.hpp  Types.hpp
Profile/src/: Profiler.cpp  Timing.cpp
Profiler/: CMakeLists.txt
Profiler/headers/: types.hpp
Tests/: CMakeLists.txt  main.cpp
Timer/: CMakeLists.txt
Timer/headers/: Timing.hpp
Timer/src/: Timing.cpp
d0/d01/: Profiler_8cpp__incl.map  Profiler_8cpp__incl.md5
d0/d05/: structRepetitionTest__TestFunction__ProfileFunction__inherit__graph.map  structRepetitionTest__TestFunction__ProfileFunction__inherit__graph.md5
d0/d07/: structProfile_1_1ProfileTrackResult.html  structProfile_1_1ProfileTrackResult.js  structProfile_1_1RepetitionProfiler-members.html
d1/d00/: OSStatistics_8hpp__dep__incl.map  OSStatistics_8hpp__dep__incl.md5
d1/d01/: structProfile_1_1RepetitionTest-members.html  structProfile_1_1RepetitionTest__inherit__graph.map  structProfile_1_1RepetitionTest__inherit__graph.md5
d1/d02/: structProfile_1_1ProfileTrackResult-members.html  structProfile_1_1Surveyor.html  structProfile_1_1Surveyor.js
d1/d04/: structProfile_1_1Timer.html  structProfile_1_1Timer.js
d1/d05/: Timing_8cpp__incl.map  Timing_8cpp__incl.md5
d1/d06/: structRepetitionTest__TestFunction__coll__graph.map
d1/d07/: Export_8hpp__dep__incl.map  Export_8hpp__dep__incl.md5
d2/d02/: structProfile_1_1ProfilerResults.html  structProfile_1_1ProfilerResults.js  structProfile_1_1Surveyor_1_1os__metrics.html  structRepetitionTest__TestFunction__Bandwidth-members.html
d2/d03/: Profiler_8hpp__dep__incl.map  Profiler_8hpp__dep__incl.md5
d2/d04/: Timing_8hpp__dep__incl.map  Timing_8hpp__dep__incl.md5
d2/d05/: structRepetitionTest__TestFunction.html  structRepetitionTest__TestFunction.js
d2/d06/: structRepetitionTest__TestFunction__ProfileFunction-members.html
d3/d00/: structRepetitionTest__TestFunction__ProfileBlock-members.html
d3/d01/: structRepetitionTest__TestFunction-members.html  structRepetitionTest__TestFunction__Bandwidth.html  structRepetitionTest__TestFunction__Bandwidth.js
d3/d02/: Profiler_8cpp.html  Profiler_8cpp.js
d4/d00/: structProfile_1_1Profiler.html  structProfile_1_1Profiler.js
d4/d05/: Types_8hpp__dep__incl.map  Types_8hpp__dep__incl.md5
d5/d00/: structProfile_1_1Timer-members.html  structRepetitionTest__TestFunction__ProfileBlock__coll__graph.map  structRepetitionTest__TestFunction__ProfileBlock__coll__graph.md5
d5/d04/: Types_8hpp.html  Types_8hpp.js  Types_8hpp_source.html
d5/d05/: structRepetitionTest__TestFunction__ProfileBlock.html  structRepetitionTest__TestFunction__ProfileBlock.js
d5/d06/: structProfile_1_1RepetitionTest.html  structProfile_1_1RepetitionTest.js  structRepetitionTest__TestFunction__ProfileBlock__inherit__graph.map  structRepetitionTest__TestFunction__ProfileBlock__inherit__graph.md5
d6/d04/: OSStatistics_8hpp__incl.map  OSStatistics_8hpp__incl.md5  structProfile_1_1ProfileBlock.html  structProfile_1_1ProfileBlock.js  structProfile_1_1ProfileTrack-members.html
d6/d06/: structRepetitionTest__TestFunction__inherit__graph.md5
d7/d04/: Timing_8hpp.html  Timing_8hpp.js  Timing_8hpp_source.html
d7/d07/: OSStatistics_8cpp.html
d8/d01/: structProfile_1_1ProfileBlockRecorder-members.html
d8/d02/: namespaceProfile.html  namespaceProfile.js
d8/d03/: Export_8hpp.html  Export_8hpp.js  Export_8hpp_source.html
d8/d04/: Profiler_8hpp__incl.map  Profiler_8hpp__incl.md5
d8/d06/: structProfile_1_1ProfilerResults-members.html
d9/d07/: structProfile_1_1ProfileBlock-members.html
da/d02/: structProfile_1_1Surveyor__coll__graph.map  structProfile_1_1Surveyor__coll__graph.md5
da/d06/: main_8cpp__incl.map  main_8cpp__incl.md5
df/d02/: main_8cpp.html  (+1 more)
doc/: Doxyfile  header.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+18 more)
src/Profile/: CMakeLists.txt  OSStatistics.cpp  Profiler.cpp  Timing.cpp
src/Tests/: CMakeLists.txt  main.cpp
src/Tests/Bindings/: CMakeLists.txt  Python.py
src/Tests/DirectBuild/ProfilerDisabled/: CMakeLists.txt
src/Tests/DirectBuild/ProfilerEnabled/: CMakeLists.txt
src/Tests/SharedLibraryLink/ProfilerDisabled/: CMakeLists.txt
src/Tests/SharedLibraryLink/ProfilerDisabled/lib/: CMakeLists.txt
src/Tests/SharedLibraryLink/ProfilerEnabled/: CMakeLists.txt
src/Tests/SharedLibraryLink/ProfilerEnabled/lib/: CMakeLists.txt
(+37 files in other folders)
